...

          </View>
        </View>
        <SMFooter style={{ height: 50, marginBottom: 2 }}>
          <View style={{ flex: 1, alignItems: 'center', paddingHorizontal: 20 }}>
            <Button
              testID="lets-order"
              full
              rounded
              style={{ backgroundColor: colors.black, height: 50, flex: 1, flexDirection: 'row', justifyContent: 'center', alignItems: 'center' }}
              onPress={() => props.navigation.goBack(null)}
            >
              <Text style={{ color: colors.white }}>Let's Order</Text>
...
            </Modal>
            <View style={{ alignItems: 'center', marginTop: 10 }}>
              <Text style={styles.title}>Join {get(appSettings, 'general.appName')}. Let's set your name and phone so we will text you once your order's ready.</Text>
            </View>
            <View style={{ alignItems: 'center', paddingVertical: 10, }}>
              <TextInput
                testID="field-name"
                placeholder={ onlyFirstName ? "Your Name" : "Full Name"}
                type="bordered"
                placeholderTextColor={'#cecece'}
                value={username}
                autoCompleteType={'name'}
                keyboardType={'default'}
...
                onChangeText={usernameChange}
                autoCapitalize
              />
            </View>
            <View style={{ alignItems: 'center', paddingVertical: 10, }}>
              <TextInput
                testID="field-phone"
                placeholder="Phone"
                type="bordered"
                placeholderTextColor={'#cecece'}
                value={phoneNumber}
                autoCompleteType={'tel'}
                keyboardType={'phone-pad'}
...
                disabled={isDisabled()}
                full
                rounded
                style={{ backgroundColor: isDisabled() ? colors.grey : colors.black, height: 50, flex: 1, flexDirection: 'row', justifyContent: 'center', alignItems: 'center' }}
                onPress={registerHandler}
              >
                <Text style={{ color: colors.white }} testID="join">Join </Text>
              </Button>
            </View>
            <View style={{ alignItems: 'center' }}>
              <TouchableOpacity style={{ flexDirection: 'column' }} onPress={() => handlePrivacyPolicy()}>
                <Text style={[styles.title, { fontSize: 11 }]}>You will receive a text message when your order is ready and our store may contact you with questions or suggestions. For more details read our <Text style={[styles.title, { fontSize: 11, textDecorationLine: 'underline' }]}>privacy policy, terms an conditions.</Text></Text>
              </TouchableOpacity>
...
