...
  if (transparent) {
    return (
      <View style={{ height: 'auto', flex: 0, zIndex: 1000 }} testID="header">
        <Header transparent hasTabs={hasTabs}>
          <Left style={{ width: 50, flex: 0, }}>
            {isMenu &&
              <Button transparent onPress={goMenu} testID="go-to-menu">
                <IconFeather name='menu' size={22} color={colors.textInputColor} />
              </Button>
            }
            {isBack &&
              <Button transparent onPress={goToBack} style={{
                backgroundColor: '#FFFFFF77',
...
          source={menuBackgroundColor ? require(`../themes/dark/topBarBgEmpty.png`) : require(`../themes/dark/topBarBg.png`)}
          style={{ height: 'auto', flex: 0, backgroundColor: menuBackgroundColor }}
          resizeMode="cover"
        >
          <Header transparent>
            <Left style={{ width: 50, flex: 0, }}>
              <TouchableOpacity testID="go-to-menu-header" style={{ marginBottom: 0, paddingBottom: 0 }} onPress={isMenu ? goMenu : isBack ? goToBack : null}>
                {isMenu &&
                  <Button transparent onPress={goMenu} testID="go-to-menu">
                    <IconFeather name='menu' size={22} color={colors.ButtonTextColor} />
                  </Button>
                }
                {isBack &&
...
