...

  const buildRoute = (appSettings) => {
    const hideLocationsScreen = get(appSettings, 'theme.hideLocationsScreen')
    const welcomePage = get(appSettings, 'apps.apps-about-us')
    const routesInit = [
      { testID: "menu-reorder", displayName: "Reorder", route: "Orders", icon: "autorenew", iconModel: 'MaterialCommunityIcons', key: "orders", defaultExist: true },
      { testID: "menu-loyalty", displayName: "Get Rewards", route: "ProfileScreen", icon: "gift-outline", iconModel: 'MaterialCommunityIcons', key: "profile", defaultExist: true, push: true },
    ];

    // locations page?
    if (hideLocationsScreen) {
      routesInit.unshift({ testID: "menu-locations", displayName: "Order Now", route: "FoodMenu", icon: "map-marker-multiple-outline", iconModel: 'MaterialCommunityIcons', defaultExist: true })
    }
...
