...
              </TouchableOpacity>
            </Callout>
          </Marker>
        )
      })}
    </MapView>
    <View style={{ position: 'absolute', bottom: 0, width: '100%', height: 180 }} testID="locations-list">
      { !!sortedLocations  && <FlatList
        horizontal={true}
        data={sortedLocations}
        keyExtractor={item => item.id}
        renderItem={({ item }) => <StoreItem data={item} onSetData={() => props.goToDetail(item)} menuBackgroundColor={props.menuBackgroundColor} />}
      />}
...
